# openapi-splitter

./: .coveragerc  .gitignore  LICENSE  Makefile  README.md  args.go  args_test.go  go.mod  io.go  io_test.go  main.go  pyproject.toml  sonar-project.properties  test.sh  types.go  yaml.go
.github/workflows/: build.yaml
res/samples/: petstore-simple.yaml
res/test/: ref-node.yml  sample1-input.yml  sample1-output.yaml  sample2-input.yaml
src/openapi_splitter/: io.py  main.py  node.py  splitter.py  verbose.py
tests/: test_io.py  test_main.py  test_node.py  test_simple.py  test_splitter.py
